:heavy_minus_sign: probléme dans les routes paramétrés

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -120,7 +120,7 @@
                         <li class="navbar__subitem active"><a [routerLink]="['pageBoutique']"  class="navbar__sublink js-navbar-sub-sublink">Page Boutique</a></li>
 
                         <li class="navbar__subitem"><a [routerLink]="['listeBoutique']" class="navbar__sublink js-navbar-sub-sublink">Liste des Boutiques</a></li>
-                        <li class="navbar__subitem active"><a [routerLink]="['boutique']"  class="navbar__sublink js-navbar-sub-sublink">Profil Boutique</a></li>
+                        <li class="navbar__subitem active"><a [routerLink]="['boutique']"  class="navbar__sublink js-navbar-sub-sublink">Ajouter Boutique</a></li>
 
                       </ul>
                     </div>
