--- a/src/app/liste-boutique/liste-boutique.component.html
+++ b/src/app/liste-boutique/liste-boutique.component.html
@@ -75,7 +75,7 @@ becomes
                       <div class="properties__offer">
                         <br>
                         <div class="properties__offer-column">
-                          <span  class="properties__more">Afficher Profil</span>
+                          <span  class="properties__more" (click)="afficherboutique()">Afficher Profil</span>
 
                         </div>
                         <div class="properties__offer-column">
