--- a/src/app/boutique/produit-boutique/produit-boutique.component.html
+++ b/src/app/boutique/produit-boutique/produit-boutique.component.html
@@ -189,10 +189,11 @@
                   </div>
                   <nav class="worker__nav">
                     <ul>
-                      <li><a (click)="gotoajout()">Ajouter Boutique</a></li>
+                      <li><a (click)="gotoajout()" >Ajouter Boutique</a></li>
                       <li><a (click)="gotoprofil()" >Profil</a></li>
                       <li><a (click)="gotomodifier()" >Modifier profil</a></li>
                       <li><a (click)="gotoproduit()" >Vos produits</a></li>
+                      <li><a (click)="gotoabonnement()" >Faire un abonnement</a></li>
                     </ul>
                   </nav>
                   <!-- end of block .worker__nav-->
