--- a/src/app/utilisateur/profilutilisateur/profilutilisateur.component.html
+++ b/src/app/utilisateur/profilutilisateur/profilutilisateur.component.html
@@ -31,10 +31,10 @@
               <div class="widget__content">
                 <div class="worker worker--profile">
                   <div class="worker__item">
-                    <div class="worker__photo"><a href="agent_profile.html" class="item-photo item-photo--static"><img src="assets/media-demo/workers/worker-3.jpg" alt="Mariusz Ciesla" class="photo">
+                    <div class="worker__photo"><a href="agent_profile.html" class="item-photo item-photo--static"><img src="{{user.photodeprofil}}"  class="photo">
                       <figure class="item-photo__hover"><span class="item-photo__more">View Details</span></figure></a></div>
                     <div class="worker__intro">
-                      <h3 class="worker__name fn">{{user.nom}}{{user.prenom}}</h3>
+                      <h3 class="worker__name fn">{{user.nom}} {{user.prenom}}</h3>
 
 
                       <div class="clearfix"></div>
@@ -62,7 +62,7 @@
               <div class="widget__content">
                 <!-- BEGIN WORKER PROFILE-->
                 <div class="worker sidebar-advanced">
-                  <h3 class="worker__name">Jenniffer Hartnet</h3>
+                  <h3 class="worker__name">{{user.nom}} {{user.prenom}}</h3>
                   <div class="worker__photo">
                     <div class="worker__avatar">
                       <svg>
@@ -73,10 +73,10 @@
                   </div>
                   <nav class="worker__nav">
                     <ul>
-                      <li><a  >Ajouter Boutique</a></li>
+
                       <li><a  >Profil</a></li>
                       <li><a  >Modifier profil</a></li>
-                      <li><a  >Vos produits</a></li>
+                      <li><a  >Vos Boutiques</a></li>
                     </ul>
                   </nav>
                   <!-- end of block .worker__nav-->
