--- a/src/app/boutique/produit-boutique/produit-boutique.component.html
+++ b/src/app/boutique/produit-boutique/produit-boutique.component.html
@@ -190,7 +190,7 @@
                   <nav class="worker__nav">
                     <ul>
                       <li><a (click)="gotoajout()" >Ajouter Boutique</a></li>
-                      <li><a (click)="gotoprofil()" >Profil</a></li>
+                      <li><a  >Profil</a></li>
                       <li><a (click)="gotomodifier()" >Modifier profil</a></li>
                       <li><a (click)="gotoproduit()" >Vos produits</a></li>
                       <li><a (click)="gotoabonnement()" >Faire un abonnement</a></li>
