--- a/src/app/boutique/afficher/afficher.component.html
+++ b/src/app/boutique/afficher/afficher.component.html
@@ -78,7 +78,7 @@
                       </svg>
                     </div>
                     <form #formulaire="ngForm" class="form-property__upload-border">
-                      <input ngModel name="image" type="file" multiple class="form-property__upload-btn-choose">
+                      <input ngModel name="file" type="file" multiple class="form-property__upload-btn-choose">
                       <button  type="submit"  (click)="UploadImage(formulaire)">Changer ma photo de profil</button>
 
                     </form>
@@ -86,9 +86,7 @@
                   </div>
                   <nav class="worker__nav">
                     <ul>
-                      <li><a (click)="gotoajout()" >Ajouter Boutique</a></li>
                       <li><a  >Profil</a></li>
-                      <li><a (click)="gotomodifier()" >Modifier profil</a></li>
                       <li><a (click)="gotoproduit()" >Vos produits</a></li>
                       <li><a (click)="gotoabonnement()" >Faire un abonnement</a></li>
                     </ul>
