--- a/src/app/utilisateur/profilutilisateur/profilutilisateur.component.html
+++ b/src/app/utilisateur/profilutilisateur/profilutilisateur.component.html
@@ -31,7 +31,7 @@
               <div class="widget__content">
                 <div class="worker worker--profile">
                   <div class="worker__item">
-                    <div class="worker__photo"><a href="agent_profile.html" class="item-photo item-photo--static"><img src="{{user.photodeprofil}}"  class="photo">
+                    <div class="worker__photo" ><a href="agent_profile.html" class="item-photo item-photo--static"><img src="{{user.photodeprofil}}"  class="photo">
                       <figure class="item-photo__hover"><span class="item-photo__more">View Details</span></figure></a></div>
                     <div class="worker__intro">
                       <h3 class="worker__name fn">{{user.nom}} {{user.prenom}}</h3>
@@ -74,7 +74,7 @@
 
                           <form #formulaire="ngForm" class="form-property__upload-border">
                             <input ngModel name="image" type="file" multiple class="form-property__upload-btn-choose">
-                            <button  type="submit"  (click)="UploadImage(formulaire)">Changer ma photo de profil</button>
+                            <button  type="submit"  (click)="UploadImage(formulaire,user.id)">Changer ma photo de profil</button>
 
                           </form>
 
