--- a/src/app/boutique/afficher/afficher.component.html
+++ b/src/app/boutique/afficher/afficher.component.html
@@ -86,9 +86,11 @@
                   </div>
                   <nav class="worker__nav">
                     <ul>
-                      <li><a  >Profil</a></li>
+                      <li><a  (click)="gotoajout()">Profil</a></li>
+                      <li><a (click)="gotoajoutProduit()" >Ajouter produit</a></li>
                       <li><a (click)="gotoproduit()" >Vos produits</a></li>
                       <li><a (click)="gotoabonnement()" >Faire un abonnement</a></li>
+                      <li><a  >Vos abonnement</a></li>
                     </ul>
                   </nav>
                   <!-- end of block .worker__nav-->
