--- a/src/app/boutique/produit-boutique/produit-boutique.component.html
+++ b/src/app/boutique/produit-boutique/produit-boutique.component.html
@@ -29,135 +29,28 @@
             <br><br>
 
 
-            <div class="listing listing--grid">
-              <div class="listing__item">
-                <div class="properties properties--grid">
-                  <div class="properties__thumb"><a href="property_details.html" class="item-photo"><img src="assets/media-demo/properties/554x360/02.jpg" alt=""/>
-                    <figure class="item-photo__hover item-photo__hover--params"><span class="properties__params">Built-Up - 65 Sq Ft</span><span class="properties__params">Land Size - 110 Sq Ft</span><span class="properties__intro">My home is bright and spacious. Very good transport links. Close to the Olympic village, Westfiel...</span><span class="properties__time">Added date: 5 days ago</span><span class="properties__more">View details</span>
-                    </figure></a><span class="properties__ribon">For rent</span>
-                  </div>
-                  <!-- end of block .properties__thumb-->
-                  <div class="properties__details">
-                    <div class="properties__info"><a href="property_details.html" class="properties__address"><span class="properties__address-street">649 West Adams Boulevard</span><span class="properties__address-city">Los Angeles, CA 90007, USA</span></a>
-                      <div class="properties__offer">
-                        <div class="properties__offer-column">
-                          <div class="properties__offer-label">Commision</div>
-                          <div class="properties__offer-value"><strong> $79</strong>
-                          </div>
-                        </div>
-                        <div class="properties__offer-column">
-                          <div class="properties__offer-value"><strong>$4,555</strong><span class="properties__offer-period">/month</span>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="properties__params--mob"><a href="#" class="properties__more">View details</a><span class="properties__params">Built-Up - 65 Sq Ft</span><span class="properties__params">Land Size - 110 Sq Ft</span></div>
-                    </div>
-                  </div>
-                  <!-- end of block .properties__info-->
-                </div>
-                <!-- end of block .properties__item-->
-              </div>
+            <div class="listing listing--grid" >
 
-              <div class="listing__item">
-                <div class="properties properties--grid">
-                  <div class="properties__thumb"><a href="property_details.html" class="item-photo"><img src="assets/media-demo/properties/554x360/04.jpg" alt=""/>
-                    <figure class="item-photo__hover item-photo__hover--params"><span class="properties__params">Built-Up - 65 Sq Ft</span><span class="properties__params">Land Size - 120 Sq Ft</span><span class="properties__intro">Footman's head: it just grazed his nose, you know?' 'It's the oldest rule in the sea. But they HA...</span><span class="properties__time">Added date: 8 days ago</span><span class="properties__more">View details</span>
-                    </figure></a><span class="properties__ribon">For sale</span>
-                  </div>
                   <!-- end of block .properties__thumb-->
-                  <div class="properties__details">
-                    <div class="properties__info"><a href="property_details.html" class="properties__address"><span class="properties__address-street">1026 Ohio Avenue</span><span class="properties__address-city">Long Beach, CA 90804, USA</span></a>
-                      <div class="properties__offer">
-                        <div class="properties__offer-column">
-                          <div class="properties__offer-label">Commision</div>
-                          <div class="properties__offer-value"><strong> $179</strong>
-                          </div>
-                        </div>
-                        <div class="properties__offer-column">
-                          <div class="properties__offer-value"><strong>$511,789</strong>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="properties__params--mob"><a href="#" class="properties__more">View details</a><span class="properties__params">Built-Up - 65 Sq Ft</span><span class="properties__params">Land Size - 120 Sq Ft</span></div>
-                    </div>
-                  </div>
-                  <!-- end of block .properties__info-->
-                </div>
-                <!-- end of block .properties__item-->
-              </div>
-              <div class="listing__item">
-                <div class="properties properties--grid">
-                  <div class="properties__thumb"><a href="property_details.html" class="item-photo"><img src="assets/img/no-image--554x360.jpg" alt=""/>
-                    <figure class="item-photo__hover item-photo__hover--params"><span class="properties__params">Built-Up - 85 Sq Ft</span><span class="properties__params">Land Size - 90 Sq Ft</span><span class="properties__intro">I am so VERY wide, but she got to do,' said the Hatter. 'You MUST remember,' remarked the King, '...</span><span class="properties__time">Added date: 10 days ago</span><span class="properties__more">View details</span>
-                    </figure></a><span class="properties__ribon">For sale</span>
-                  </div>
-                  <!-- end of block .properties__thumb-->
-                  <div class="properties__details">
-                    <div class="properties__info"><a href="property_details.html" class="properties__address"><span class="properties__address-street">514 East Myrtle Street</span><span class="properties__address-city">Santa Ana, CA 92701, USA</span></a>
-                      <div class="properties__offer">
-                        <div class="properties__offer-column">
-                          <div class="properties__offer-label">Commision</div>
-                          <div class="properties__offer-value"><strong> 8%</strong>
-                          </div>
-                        </div>
-                        <div class="properties__offer-column">
-                          <div class="properties__offer-value"><strong>$79,560</strong>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="properties__params--mob"><a href="#" class="properties__more">View details</a><span class="properties__params">Built-Up - 85 Sq Ft</span><span class="properties__params">Land Size - 90 Sq Ft</span></div>
-                    </div>
-                  </div>
-                  <!-- end of block .properties__info-->
-                </div>
-                <!-- end of block .properties__item-->
-              </div>
-              <div class="listing__item">
-                <div class="properties properties--grid">
-                  <div class="properties__thumb"><a href="property_details.html" class="item-photo"><img src="assets/media-demo/properties/554x360/06.jpg" alt=""/>
-                    <figure class="item-photo__hover item-photo__hover--params"><span class="properties__params">Built-Up - 505 Sq Ft</span><span class="properties__params">Land Size - 1010 Sq Ft</span><span class="properties__intro">I needn't be afraid of them!' 'And who is to France Then turn not pale, beloved snail, but come a...</span><span class="properties__time">Added date: 12 days ago</span><span class="properties__more">View details</span>
-                    </figure></a><span class="properties__ribon">For rent</span>
-                  </div>
-                  <!-- end of block .properties__thumb-->
-                  <div class="properties__details">
-                    <div class="properties__info"><a href="property_details.html" class="properties__address"><span class="properties__address-street">1230 Martin Luther King</span><span class="properties__address-city">Los Angeles, CA 90037, USA</span></a>
-                      <div class="properties__offer">
-                        <div class="properties__offer-column">
-                          <div class="properties__offer-label">Commision</div>
-                          <div class="properties__offer-value"><strong> $550</strong>
-                          </div>
-                        </div>
-                        <div class="properties__offer-column">
-                          <div class="properties__offer-value"><strong>$2,255</strong><span class="properties__offer-period">/month</span>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="properties__params--mob"><a href="#" class="properties__more">View details</a><span class="properties__params">Built-Up - 505 Sq Ft</span><span class="properties__params">Land Size - 1010 Sq Ft</span></div>
-                    </div>
-                  </div>
-                  <!-- end of block .properties__info-->
-                </div>
-                <!-- end of block .properties__item-->
-              </div>
-              <div class="listing__item">
+              <div class="listing__item" *ngFor="let boutiques of boutique">
                 <div class="properties properties--grid">
                   <div class="properties__thumb"><a   class="item-photo"><img src="/assets/img/0602277368516-web-tete.jpg" alt=""/>
-                    <figure class="item-photo__hover item-photo__hover--params"><span class="properties__params">Douleur et fièvre</span> <span  class="properties__more">Plus d'information</span><span class="properties__time">Ajouter le: 09/02/2021</span><span class="properties__time">Date limite de consommation: 15/03/2021</span><span class="properties__more">Acheter</span>
-                    </figure></a><span class="properties__ribon">Médicament</span>
+                    <figure class="item-photo__hover item-photo__hover--params"><span class="properties__params">Douleur et fièvre</span> <span  class="properties__more">Plus d'information</span><span class="properties__time">Ajouter le: 09/02/2021</span><span class="properties__time">Date limite de consommation: {{boutiques.DLC}}</span><span class="properties__more">Acheter</span>
+                    </figure></a><span class="properties__ribon">{{boutiques.categorie}}</span>
                   </div>
                   <!-- end of block .properties__thumb-->
                   <div class="properties__details">
-                    <div class="properties__info"><a href="property_details.html" class="properties__address"><span class="properties__address-street">Doliprane 1000 mg</span><span class="properties__address-city">Mornaguia</span></a>
+                    <div class="properties__info"><a href="property_details.html" class="properties__address"><span class="properties__address-street">{{boutiques.nom}}</span><span class="properties__address-city">Mornaguia</span></a>
                       <div class="properties__offer">
                         <div class="properties__offer-column">
                           <div class="properties__offer-label">Prix sans remise</div>
-                          <div class="properties__offer-value"><strong> 3 dt</strong>
+                          <div class="properties__offer-value"><strong> {{boutiques.prixsansremise}}</strong>
                           </div>
 
                         </div>
                         <div class="properties__offer-column">
                           <div class="properties__offer-label">Prix avec remise</div>
-                          <div class="properties__offer-value"><strong>1 dt</strong>
+                          <div class="properties__offer-value"><strong>{{boutiques.prixavecremise}}</strong>
                           </div>
                         </div>
                       </div>
