--- a/src/app/boutique/profil/profil.component.html
+++ b/src/app/boutique/profil/profil.component.html
@@ -38,7 +38,7 @@
                         </div>
                         <div class="form-group">
                           <label for="in-4" class="control-label">Domaine</label>
-                          <select ngModel id="in-4" name="domaine" data-placeholder="Choose a Country..." required class="form-control js-in-select">
+                          <select ngModel id="in-4" name="domaine" data-placeholder="Choose a Country..." required class="form-control">
                             <option label=" "></option>
                             <option value="pharmacie">Pharmacie</option>
                             <option value="boutique">Boutique</option>
