:sparkles: ajouter la pagination

--- a/src/app/page-boutique/page-boutique.component.html
+++ b/src/app/page-boutique/page-boutique.component.html
@@ -44,9 +44,7 @@ becomes
         <div class="map__buttons">
           <button type="button" class="map__change-map js-map-btn">Property Map</button>
         </div>
-        <div class="map__wrap">
-          <div data-infobox-theme="white" class="map__view js-map-index-canvas"></div>
-        </div>
+
       </div>
       <!-- BEGIN SEARCH-->
       <form action="" class="form form--flex form--search js-search-form form--wide form--map-bottom">
@@ -1190,7 +1188,7 @@ becomes
 
           <div class="form-group">
             <label for="in-datetime" class="control-label">Date limite de consomation</label>
-            <input type="text" id="in-datetime" data-start-date="09/06/2021"  data-time-picker="false" data-single-picker="true" class="js-datetimerange form-control">
+            <p-calendar name="" id="in-datetime" showButtonBar="true"></p-calendar>
           </div>
           <div class="form-group">
             <div class="form__mode">
