--- a/src/app/liste-boutique/liste-boutique.component.html
+++ b/src/app/liste-boutique/liste-boutique.component.html
@@ -37,7 +37,10 @@
 
 
 
-              <div class="listing__item" *ngFor="let boutiques of boutique">
+              <div class="listing__item" *ngFor="let boutiques of boutique | paginate:{ id: 'listing_pagination',
+              itemsPerPage: 3,
+              currentPage: page,
+              totalItems: totalRecords}">
                 <div class="properties properties--grid">
                   <div class="properties__thumb"><a   class="item-photo"><img src="/assets/img/0602277368516-web-tete.jpg" alt=""/>
                   </a>
@@ -320,15 +323,7 @@
         <!-- BEGIN PAGINATION-->
         <nav class="listing__pagination">
           <ul class="pagination-custom">
-            <li><a href="#"><span aria-hidden="true" class="glyphicon glyphicon-chevron-left"></span><span class="sr-only">Previous</span></a></li>
-            <li><a href="#">1</a></li>
-            <li><span>...</span></li>
-            <li class="active-before"><a href="#">3</a></li>
-            <li class="active"><span>4</span></li>
-            <li class="active-after"><a href="#">5</a></li>
-            <li><span>...</span></li>
-            <li><a href="#">15</a></li>
-            <li><a href="#"><span aria-hidden="true" class="glyphicon glyphicon-chevron-right"></span><span class="sr-only">Next</span></a></li>
+           <pagination-controls id="listing_pagination" maxSize="5" directionLinks="true" (pageChange)="page = $event"></pagination-controls>
           </ul>
         </nav>
         <!-- END PAGINATION-->
