--- a/src/app/boutique/produit-boutique/produit-boutique.component.html
+++ b/src/app/boutique/produit-boutique/produit-boutique.component.html
@@ -32,15 +32,18 @@
             <div class="listing listing--grid" >
 
                   <!-- end of block .properties__thumb-->
-              <div class="listing__item" *ngFor="let boutiques of boutique">
+              <div class="listing__item" *ngFor="let boutiques of boutique | paginate:{ id: 'listing_pagination',
+              itemsPerPage: 6,
+              currentPage: page,
+              totalItems: totalRecords}">
                 <div class="properties properties--grid">
                   <div class="properties__thumb"><a   class="item-photo"><img src="/assets/img/0602277368516-web-tete.jpg" alt=""/>
-                    <figure class="item-photo__hover item-photo__hover--params"><span class="properties__params">Douleur et fièvre</span> <span  class="properties__more">Plus d'information</span><span class="properties__time">Ajouter le: 09/02/2021</span><span class="properties__time">Date limite de consommation: {{boutiques.DLC}}</span><span class="properties__more">Acheter</span>
+                    <figure class="item-photo__hover item-photo__hover--params"><span class="properties__params">Douleur et fièvre</span> <span class="properties__time">Ajouter le: 09/02/2021</span><span class="properties__time">Date limite de consommation: {{boutiques.DLC}}</span><span  class="properties__more" (click)="gotoDetailsProduit(boutiques.id)">Plus d'information</span>
                     </figure></a><span class="properties__ribon">{{boutiques.categorie}}</span>
                   </div>
                   <!-- end of block .properties__thumb-->
                   <div class="properties__details">
-                    <div class="properties__info"><a href="property_details.html" class="properties__address"><span class="properties__address-street">{{boutiques.nom}}</span><span class="properties__address-city">Mornaguia</span></a>
+                    <div class="properties__info"><span class="properties__address-street">{{boutiques.nom}}</span><span class="properties__address-city"><p-rating readonly=true [(ngModel)]="val"></p-rating></span>
                       <div class="properties__offer">
                         <div class="properties__offer-column">
                           <div class="properties__offer-label">Prix sans remise</div>
@@ -62,7 +65,15 @@
                 <!-- end of block .properties__item-->
               </div>
             </div>
-
+            <div class="ui__row">
+              <!-- BEGIN PAGINATION-->
+              <nav class="listing__pagination">
+                <ul class="pagination-custom">
+                  <pagination-controls id="listing_pagination" maxSize="5" directionLinks="true" (pageChange)="page = $event"></pagination-controls>
+                </ul>
+              </nav>
+              <!-- END PAGINATION-->
+            </div>
           </div>
           <div class="sidebar">
             <div class="widget js-widget widget--sidebar widget--first-no-head">
