--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -162,6 +162,23 @@
                   </div>
                 </div>
 
+                <li class="navbar__item js-dropdown"><a class="navbar__link">Panier
+
+
+                  <svg class="navbar__arrow">
+                    <use xlink:href="#icon-arrow-right"></use>
+                  </svg></a>
+                  <div role="menu" class="js-dropdown-menu navbar__dropdown navbar__dropdown--colls-1">
+                    <button class="navbar__back js-navbar-submenu-back">
+                      <svg class="navbar__arrow">
+                        <use xlink:href="#icon-arrow-left"></use>
+                      </svg>Back
+                    </button>
+                    <div class="navbar__submenu">
+
+                    </div>
+                  </div>
+                </li>
                 <li class="navbar__item js-dropdown"><a class="navbar__link">Contact
                   <svg class="navbar__arrow">
                     <use xlink:href="#icon-arrow-right"></use>
@@ -178,34 +195,7 @@
                   </div>
                 </li>
 
-                <li class="navbar__item js-dropdown"><a class="navbar__link">Dashboard
-                  <svg class="navbar__arrow">
-                    <use xlink:href="#icon-arrow-right"></use>
-                  </svg></a>
-                  <div role="menu" class="js-dropdown-menu navbar__dropdown navbar__dropdown--colls-1">
-                    <button class="navbar__back js-navbar-submenu-back">
-                      <svg class="navbar__arrow">
-                        <use xlink:href="#icon-arrow-left"></use>
-                      </svg>Back
-                    </button>
-                    <div class="navbar__submenu">
-                      <ul class="navbar__subnav">
-                        <li class="navbar__subitem"><a href="" class="navbar__sublink">Dashboard</a></li>
-                        <li class="navbar__subitem"><a href="" class="navbar__sublink">Add Listing</a></li>
-                        <li class="navbar__subitem"><a href="" class="navbar__sublink">News Feed</a></li>
-                        <li class="navbar__subitem"><a href="" class="navbar__sublink">Profile</a></li>
-                        <li class="navbar__subitem"><a href="" class="navbar__sublink">Activity Log</a></li>
-                        <li class="navbar__subitem"><a href="" class="navbar__sublink">Favorite Listings</a></li>
-                        <li class="navbar__subitem"><a href="" class="navbar__sublink">Favorite Agents</a></li>
-                        <li class="navbar__subitem"><a href="" class="navbar__sublink">Favorite search</a></li>
-                        <li class="navbar__subitem"><a href="" class="navbar__sublink">Financials</a></li>
-                        <li class="navbar__subitem"><a href="" class="navbar__sublink">Statistics</a></li>
-                        <li class="navbar__subitem"><a href="" class="navbar__sublink">Property management</a></li>
-                        <li class="navbar__subitem"><a href="" class="navbar__sublink">Blog Management</a></li>
-                      </ul>
-                    </div>
-                  </div>
-                </li>
+
 
                 <div role="menu" class="js-dropdown-menu navbar__dropdown navbar__dropdown--right navbar__dropdown--colls-2">
                   <button class="navbar__back js-navbar-submenu-back">
