--- a/src/app/boutique/afficher/afficher.component.html
+++ b/src/app/boutique/afficher/afficher.component.html
@@ -51,11 +51,20 @@
                             <div class="skype"><span class="type">Horaire</span><a href="skype:Ciesla_1981?call" class="uri value">{{boutique1.horaire}}</a></div>
                           </div>
                           <!-- end of block .worker__contacts-->
+                          <div *ngIf="lat && lng">
+                            <agm-map [latitude]="lat" [longitude]="lng" >
+                              <agm-marker [latitude]="lat" [longitude]="lng" >
+                                <agm-info-window>
+                                  <h3><strong>Bonjour</strong></h3>
+                                  <p>c'est votre position</p>
+                                </agm-info-window>
+                              </agm-marker></agm-map>
+                          </div>
                         </div>
                         <div class="social social--worker"><a href="#" class="social__item"><i class="fa fa-facebook"></i></a><a href="#" class="social__item"><i class="fa fa-linkedin"></i></a><a href="#" class="social__item"><i class="fa fa-twitter"></i></a><a href="#" class="social__item"><i class="fa fa-google-plus"></i></a></div>
 
+                        </div>
 
-                      </div>
 
                     </div>
                   </div>
@@ -124,4 +133,6 @@
     <!-- end of block .footer-->
     <!-- END FOOTER-->
   </div>
+
 </div>
+
