--- a/src/app/page-boutique/page-boutique.component.html
+++ b/src/app/page-boutique/page-boutique.component.html
@@ -37,15 +37,20 @@ becomes
     </nav>
 
 
+    <div *ngIf="lat && lng">
+      <agm-map [latitude]="lat" [longitude]="lng" >
+        <agm-marker [latitude]="lat" [longitude]="lng" >
+          <agm-info-window>
+            <h3><strong>Bonjour</strong></h3>
+            <p>c'est votre position</p>
+          </agm-info-window>
+        </agm-marker></agm-map>
+    </div>
+
   </div>
   <div class="widget js-widget widget--gray">
     <div class="widget__content">
-      <div class="map map--index map--bottom">
-        <div class="map__buttons">
-          <button type="button" class="map__change-map js-map-btn">Property Map</button>
-        </div>
 
-      </div>
       <!-- BEGIN SEARCH-->
       <form action="" class="form form--flex form--search js-search-form form--wide form--map-bottom">
         <div class="row">
@@ -1258,12 +1263,12 @@ becomes
               totalItems: totalRecords}">
                 <div class="properties properties--grid">
                   <div class="properties__thumb"><a   class="item-photo"><img src="/assets/img/0602277368516-web-tete.jpg" alt=""/>
-                    <figure class="item-photo__hover item-photo__hover--params"><span class="properties__params">Douleur et fièvre</span> <span  class="properties__more">Plus d'information</span><span class="properties__time">Ajouter le: 09/02/2021</span><span class="properties__time">Date limite de consommation: {{boutiques.DLC}}</span>
+                    <figure class="item-photo__hover item-photo__hover--params"><span class="properties__params">Douleur et fièvre</span> <span  class="properties__more" (click)="gotodetails(boutiques.boutique.id,boutiques.id)">Plus d'information</span><span class="properties__time">Ajouter le: 09/02/2021</span><span class="properties__time">Date limite de consommation: {{boutiques.DLC}}</span>
                     </figure></a><span class="properties__ribon">{{boutiques.categorie}}</span>
                   </div>
                   <!-- end of block .properties__thumb-->
                   <div class="properties__details">
-                    <div class="properties__info"><a href="property_details.html" class="properties__address"><span class="properties__address-street">{{boutiques.nom}}</span><span class="properties__address-city">Mornaguia</span></a>
+                    <div class="properties__info"><a href="property_details.html" class="properties__address"><span class="properties__address-street">{{boutiques.nom}}</span><span class="properties__address-city"><p-rating readonly=true [(ngModel)]="val"></p-rating></span></a>
                       <div class="properties__offer">
                         <div class="properties__offer-column">
                           <div class="properties__offer-label">Prix sans remise</div>
