--- a/src/app/utilisateur/profilutilisateur/profilutilisateur.component.html
+++ b/src/app/utilisateur/profilutilisateur/profilutilisateur.component.html
@@ -31,7 +31,7 @@
               <div class="widget__content">
                 <div class="worker worker--profile">
                   <div class="worker__item">
-                    <div class="worker__photo" ><a href="agent_profile.html" class="item-photo item-photo--static"><img src="" class="photo">
+                    <div class="worker__photo" ><a href="agent_profile.html" class="item-photo item-photo--static"><img src="http://localhost:3000/utilisateur/profileimage/{{user.photodeprofil}}" class="photo">
                       <figure class="item-photo__hover"><span class="item-photo__more">View Details</span></figure></a></div>
                     <div class="worker__intro">
                       <h3 class="worker__name fn">{{user.nom}} {{user.prenom}}</h3>
@@ -64,13 +64,12 @@
                 <div class="worker sidebar-advanced">
                   <h3 class="worker__name">{{user.nom}} {{user.prenom}}</h3>
                   <div class="worker__photo">
-                    <div class="worker__avatar">
-                      <svg>
-                        <use xlink:href="#icon-avatar"></use>
-                      </svg>
-                    </div>
+
+                      <img src="http://localhost:3000/utilisateur/profileimage/{{user.photodeprofil}}" class="photo" width="200" height="200">
+
                     <div class="widget js-widget widget--main widget--no-margin widget--no-border widget--collapse">
                       <div class="widget__header">
+                        <br>
 
                           <div  class="form-property__upload-border">
                             <input type="file" (change)="UploadImage($event)" class="form-property__upload-btn-choose">
