--- a/src/app/liste-boutique/liste-boutique.component.html
+++ b/src/app/liste-boutique/liste-boutique.component.html
@@ -42,8 +42,7 @@
               currentPage: page,
               totalItems: totalRecords}">
                 <div class="properties properties--grid">
-                  <div class="properties__thumb"><a   class="item-photo"><img src="/assets/img/0602277368516-web-tete.jpg" alt=""/>
-                  </a>
+                  <div class="properties__thumb"><img src="http://localhost:3000/boutique/profileimage/{{boutiques.photo}}" width="370" height="120" alt=""/>
                   </div>
                   <!-- end of block .properties__thumb-->
                   <div class="properties__details">
