--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -162,7 +162,7 @@
                   </div>
                 </div>
 
-                <li class="navbar__item js-dropdown"><a class="navbar__link">Panier
+                <li class="navbar__item js-dropdown"><a class="navbar__link" [routerLink]="['commande']" routerLinkActive="active">Panier
 
 
                   <svg class="navbar__arrow">
